--- a/Lecture-14/sockets-application/package.json
+++ b/Lecture-14/sockets-application/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "“aayusharora” <“aayush113002@gmail.com”>",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "hbs": "^4.0.1",
-    "socket.io": "^2.1.1"
-  }
+  "license": "ISC"
 }
